# american-options-engine

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/backtest/: 10y.json  10y.txt  5y.json  5y.txt
src/american_options_engine.egg-info/: PKG-INFO  SOURCES.txt
src/aoe/: config.py  edge.py  metrics.py
src/aoe/backtest/: engine.py  yfbt.py
src/aoe/data/: chain.py  yf.py
src/aoe/execution/: blotter.py  broker.py
src/aoe/models/: gbm.py  heston.py  heston_calibration.py  merton.py
src/aoe/monitor/: early.py
src/aoe/pnl/: ledger.py  mtm.py
src/aoe/pricing/: euro_mc.py  fd2d.py  jump_tree.py  spread.py  tree.py
src/aoe/risk/: sizer.py  var.py
src/tests/: conftest.py  test_backtest_min.py  test_calibrate_cli.py  test_capture_env.py  test_chain.py  test_config.py  test_credit_spreads.py  test_diagnostics.py  test_edge_calc.py  test_eps_signal.py  test_execution.py  test_gbm_euro_mc.py  test_heston_calibration.py  test_heston_fd.py  test_invariants_ic.py  test_ledger_backtest.py  test_ledger_envpath.py  test_ledger_init.py  test_live_fetch.py  test_macro_shock.py  test_merton_tree.py  test_metrics.py  test_monitor.py  test_monitor_day.py  test_paper_scripts.py  test_pnl.py  test_properties.py  test_rehydrate.py  test_risk_sizer.py  test_run_backtest_yf_equity_metrics.py  test_screen_api.py  test_screen_day.py  test_screen_day_model_resolver.py  test_screen_logic.py  test_spot_and_chain.py  test_spread_price.py  test_spreads_build.py  test_tree_crr.py  test_universe.py  test_walkforward_windows.py  (+2 more)
web/: app.py
web/data/: blotter.csv
(+8 files in other folders)
