[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aoe-options-research-console"
version = "0.1.0"
description = "Local Streamlit research console for screening and paper-trading defined-risk options spreads."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Joshua To"}]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
